# FreshTomato-Leaf-Disease-Detection-Project

./: LICENSE  README.md  app.py  final_tomato.h5  requirements.txt
leaf-detection/: pyproject.toml
static/: animate.js  style.css
templates/: home.html  index.html  report.html
