[tool.poetry]
name = "leaf-detection"
version = "0.1.0"
description = ""
authors = ["itsmeharshit554 <sainiharshit554@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-reuploaded = "^1.4.0"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
